fixed color stop bar too long

--- a/controls/numberControl/numberControl.css
+++ b/controls/numberControl/numberControl.css
@@ -39,7 +39,7 @@
     transform:            translateY(-50%);
     white-space:          nowrap;
     margin-left:          3px;
-    /* box-shadow:           0 0 0 1px inset orange; */
+    box-shadow:           0 0 0 1px inset orange;
 }
 
 
