--- a/parameters/Parameter.css
+++ b/parameters/Parameter.css
@@ -34,5 +34,5 @@
     height:                auto;
     margin-right:          3px;
     position:              absolute;
-    /* box-shadow:            0 0 0 1px inset red; */
+    box-shadow:            0 0 0 1px inset red;
 }
